--- a/login.html
+++ b/login.html
@@ -20,31 +20,63 @@
         <!-- 登录div -->
         <div class="login-box">
             <!-- 登录的表单 -->
-            <form class="layui-form" action="">
+            <form class="layui-form" id="form_login">
                 <!-- 用户名 -->
-                <div class="layui-form-item">
+                <div class="layui-form-item">   
+                <i class="layui-icon layui-icon-username"></i>  
                 <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
                 </div>
                 <!-- 密码 -->
                 <div class="layui-form-item">
-                <input type="password" name="password" required  lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                <i class="layui-icon layui-icon-password"></i> 
+                <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
                 </div>
                 <!-- 登录按钮 -->
                 <div class="layui-form-item">
                     <!-- 注意：提交按钮有个lay-submit属性 -->
                     <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
                 </div>
-                <div class="layui-form-item links"><a href="javascript:;" id="link_login">去注册账号</a></div>
+                <div class="layui-form-item links"><a href="javascript:;" id="link_reg">去注册账号</a></div>
             </form>
         </div>
         <!-- 注册div -->
         <div class="reg-box">
-            <a href="javascript:;" id="link_reg">去登录</a>
+            <!-- 注册的表单 -->
+            <form class="layui-form" id="form_reg">
+                <!-- 用户名 -->
+                <div class="layui-form-item">   
+                <i class="layui-icon layui-icon-username"></i>  
+                <input type="text" name="username" required  lay-verify="required" placeholder="请输入用户名" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                <i class="layui-icon layui-icon-password"></i> 
+                <input type="password" name="password" required  lay-verify="required|pwd" placeholder="请输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码确认 -->
+                <div class="layui-form-item">
+                <i class="layui-icon layui-icon-password"></i> 
+                <input type="password" name="repassword" required  lay-verify="required|pwd|repwd" placeholder="再次确认密码" autocomplete="off" class="layui-input">
+                </div>
+                <!-- 注册按钮 -->
+                <div class="layui-form-item">
+                    <!-- 注意：提交按钮有个lay-submit属性 -->
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>注册</button>
+                </div>
+                <div class="layui-form-item links"><a href="javascript:;" id="link_login">去登录</a></div>
+            </form>
+            
         </div>
         
     </div>
+    <!-- 引入Layui的脚本文件 -->
+    <script src="./assets/lib/layui/layui.all.js"></script>
     <!-- 导入jQuery -->
     <script src="/project_cms/assets/lib/jquery.js"></script>
+    <!-- 导入自己封装的baseAPI.js -->
+    <script src="/project_cms/assets/js/baseAPI.js"></script>
+    <!-- 导入自己封装的login.js -->
     <script src="/project_cms/assets/js/login.js"></script>
+
 </body>
 </html>
