--- a/index.html
+++ b/index.html
@@ -51,11 +51,14 @@
           <li class="layui-nav-item layui-this"><a href="./home/dashboard.html" target="fm"><span
                 class="iconfont icon-home"></span>首页</a></li>
           <li class="layui-nav-item">
-            <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
+            <a class="" href="/assets/article/art_cate.html" target="fm"><span class="iconfont icon-16"></span>文章管理</a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+              <dd><a href="/assets/article/art_cate.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章类别</a>
+              </dd>
+              <dd><a href="/assets/article/art_list.html" target="fm"><i class="layui-icon layui-icon-app"></i>文章列表</a>
+              </dd>
+              <dd><a href="/assets/article/art_pub.html" target="fm"><i class="layui-icon layui-icon-app"></i>发表文章</a>
+              </dd>
             </dl>
           </li>
           <li class="layui-nav-item">
@@ -81,7 +84,7 @@
     </div>
   </div>
   <!-- 导入layui的js文件 -->
-  <script src="./assets/lib/layui/layui.all.js"></script>
+  <script src="/assets/lib/layui/layui.all.js"></script>
   <!-- 导入 jQuery  -->
   <script src="./assets/lib/jquery.js"></script>
   <!-- 导入自己封装的baseAPI.js -->
